--- a/index.html
+++ b/index.html
@@ -115,6 +115,7 @@
             <p>Email: <a href="mailto:hesbonmanyinsa96@gmail.com">hesbonmanyinsa96@gmail.com</a></p>
             <p>Phone: +254743573380</p>
             <p>LinkedIn: <a href="https://www.linkedin.com/in/hesbon-angwenyi-58b9412b4" target="_blank">Hesbon Angwenyi LinkedIn Profile</a></p>
+            <p>GitHub: <a href="https://github.com/hesbonangwenyi606" target="_blank">hesbonangwenyi606</a></p>
         </div>
         <div class="section">
             <h2 class="section-title">SUMMARY</h2>
@@ -162,22 +163,28 @@
         <div class="section">
             <h2 class="section-title">Professional Experience</h2>
             <h3>projects</h3>
-            <p><strong>QA/ Automation Tester</strong> (Sept 2023    -  May 2024 - Present)</p>
+            <p><strong>QA/ Automation Tester</strong> (Sept 2023 - May 2024 - Present)</p>
             <p>Event Planner Application</p>
             <ul class="section-content">
                 <li>Developed an event planner application using React.js for the front-end and Node.js with Express for the back-end.</li>
-                <li>Implemented features for event scheduling, attendee management, and real-time notifications using WebSocket technology.</li>
+                <li>Implemented features for event scheduling, attendee management, and real-time notifications using WebSocket technology. Live Demo: <a href="http://localhost:3000/" target="_blank">(Live Demo)</a></li>
+                <li>GitHub Backend Link: <a href="https://github.com/irungudennisnganga/Event-Planner-App-backend.git" target="_blank">Event Planner Backend GitHub Repository</a></li>
+                <li>GitHub Frontend Link: <a href="https://github.com/MainaZaquir/Event-Planner.git" target="_blank">Event Planner Frontend GitHub Repository</a></li>
             </ul>
             <p>E-commerce Website</p>
             <ul class="section-content">
                 <li>Collaborated on a team to design and develop an e-commerce website using React for the front-end and Python with Django for the back-end.</li>
                 <li>Integrated payment gateways, product catalog management, and user authentication functionalities.</li>
+                <li>GitHub Link: <a href="https://github.com/Ndungu-Muigai/ShopSavvyHub-ecommerce-site.git" target="_blank">ShopSavvyHub E-commerce GitHub Repository</a></li>
+                <li>Live Demo: <a href="https://shopsavvy-ecommerce-site.netlify.app/" target="_blank">(Live Demo)</a></li>
             </ul>
             <p>Bank Application</p>
             <ul class="section-content">
                 <li>Led the development of a secure bank application using Java with Spring Boot.</li>
                 <li>Ensured compliance with industry standards for data encryption and authentication protocols.</li>
                 <li>Implemented transaction processing, account management, and customer support features.</li>
+                <li>GitHub Link: <a href="https://github.com/MaxLubale/Vaulted_Wealth.git" target="_blank">Vaulted Wealth GitHub Repository</a></li>
+                <li>Live Demo: <a href="https://vaulted-wealth.onrender.com/" target="_blank">(Live Demo)</a></li>
             </ul>
         </div>
         <div class="section">
