--- a/index.html
+++ b/index.html
@@ -10,13 +10,15 @@
             line-height: 1.6;
             margin: 0;
             padding: 0 20px;
-            background-color: #f4f4f4;
+            background: url('/mnt/data/Screenshot from 2024-06-24 17-34-07.png') no-repeat center center fixed;
+            background-size: cover;
+            color: #2c3e50;
         }
         .container {
             max-width: 800px;
             margin: 20px auto;
             padding: 20px;
-            background-color: #fff;
+            background-color: rgba(255, 255, 255, 0.9);
             border-radius: 8px;
             box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
             display: flex; /* Ensure container and image are displayed in flex layout */
@@ -122,12 +124,12 @@
             <h2>Software Engineer</h2>
             <div class="contact-info">
                 <p>Email: <a href="mailto:hesbonmanyinsa96@gmail.com">hesbonmanyinsa96@gmail.com</a></p>
-                <p>Phone: +254743573380</p>
+                <p>Phone: <a href="tel:+254743573380">+254743573380</a></p> <!-- Updated phone number link -->
                 <p>LinkedIn: <a href="https://www.linkedin.com/in/hesbon-angwenyi-58b9412b4" target="_blank">Hesbon Angwenyi LinkedIn Profile</a></p>
                 <p>GitHub: <a href="https://github.com/hesbonangwenyi606" target="_blank">hesbonangwenyi606</a></p>
             </div>
         </div>
-        <img src="path/to/your/picture.jpg" alt="Hesbon Angwenyi" class="profile-picture">
+        <img src="https://lh3.googleusercontent.com/pw/AP1GczOoXxVQ1Oh2v5Rwq3UZC5naHzvoZNa0ivG5f6L2swMKEOR9b0-nss-y66LAVLQW2NeuffgkxuUBjWt1-AmuK2lb8_Lp2b8ptBhswuC0igoP3GwHXYeWULy__vlmWPFGKspvrPSi8ArQKnZxgnh-vSDg76NRUBpPa_x4W2xqAl7NWtevrQN_EzS2fZn__VSFoiQbvJdvyAnIh91BxCmK8AUnCKFswuDd1bYSImQto6Zwdzk53eoLAxjLQaDAe1UDyE_F8sLAAmYfKsKhY3MIgGc60wXjrezW3q4vh_olue5wjQTmQHt78zEf0LqFXwWzdGs2MuAEL8kbZ7-Yg32kZD6U_WPCu2Fef_Ih5zvkCQFqfHtevi26WvCOE1FS-HZgt35784akYr7R3_05vIKmTh_19hazAC3h9wObvYqquIR5AamIZtMCJGVU-wtZaxhMRmDJTPgM216_ry4X_JD96gf6k3WsN-FxtMn_EDxiMcqD5C-YyygCkiEn7PbkpjaXU6MacHVLLYrG_JRbin9f_yL_RI42d-DzQYpTXoSFWwmY4qs_VWgQDfXdJMBlKbqMmCxyifv3svMzE_xTw3IuhTAdd4SppQgORK-Coc77-raTCRHE0rR3UNIX0nmpJHPRVqkKHzvY8pL5aYTerUn7VvuunmoIWIvqECgC6ZF8eJtOhPBT3IlNkcbtmC494_pQmOdHF9EAerxDZuAeozucl3BYvJzvxwN5LlAQKNdtNw5xRXHp6FibZ0Cc8QZugf0643I8X8WMHgxj7Y-DsqumDyUSFXVCxy4JO3Gas9oxrTFNoX6k0SqiX1LyCyRM8jmescv_9vu25Vf5p5pAtkJvI1U3aoDymXPnfvwoZ0PyQ0-CofePHRCMoFHe9XxD1y2wHQxNUr_p1YB7JlYWcTQOreqGuVU8NtLfEVqTiYwmawzCOd0jmA4fPcI4BWqORAI=w255-h582-s-no?authuser=0" alt="Hesbon Angwenyi" class="profile-picture">
     </div>
     <div class="section">
         <h2 class="section-title">SUMMARY</h2>
@@ -179,22 +181,25 @@
         <p>Event Planner Application</p>
         <ul class="section-content">
             <li>Developed an event planner application using React.js for the front-end and Node.js with Express for the back-end.</li>
-            <li>Implemented features for event scheduling, attendee management, and real-time notifications using WebSocket technology. Live Demo: <a href="http://localhost:3000/" target="_blank">(Live Demo)</a></li>
+            <li>Implemented features for event scheduling, attendee management, and real-time notifications using WebSocket technology.</li>
             <li>GitHub Backend Link: <a href="https://github.com/irungudennisnganga/Event-Planner-App-backend.git" target="_blank">Event Planner Backend GitHub Repository</a></li>
             <li>GitHub Frontend Link: <a href="https://github.com/MainaZaquir/Event-Planner.git" target="_blank">Event Planner Frontend GitHub Repository</a></li>
+            <li>Live Demo: <a href="http://localhost:3000/" target="_blank">(Live Demo)</a></li>
         </ul>
         <p>E-commerce Website</p>
         <ul class="section-content">
             <li>Collaborated on a team to design and develop an e-commerce website using React for the front-end and Python with Django for the back-end.</li>
-            <li>Integrated payment gateways, product catalog management, and user authentication functionalities. Live Demo: <a href="https://shopsavvy-ecommerce-site.netlify.app/" target="_blank">(Live Demo)</a></li>
+            <li>Integrated payment gateways, product catalog management, and user authentication functionalities.</li>
             <li>GitHub Link: <a href="https://github.com/Ndungu-Muigai/ShopSavvyHub-ecommerce-site.git" target="_blank">ShopSavvyHub GitHub Repository</a></li>
+            <li>Live Demo: <a href="https://shopsavvy-ecommerce-site.netlify.app/" target="_blank">(Live Demo)</a></li>
         </ul>
         <p>Bank Application</p>
         <ul class="section-content">
             <li>Led the development of a secure bank application using Java with Spring Boot.</li>
             <li>Ensured compliance with industry standards for data encryption and authentication protocols.</li>
-            <li>Implemented transaction processing, account management, and customer support features. Live Demo: <a href="https://vaulted-wealth.onrender.com/" target="_blank">(Live Demo)</a></li>
+            <li>Implemented transaction processing, account management, and customer support features.</li>
             <li>GitHub Link: <a href="https://github.com/MaxLubale/Vaulted_Wealth.git" target="_blank">Vaulted Wealth GitHub Repository</a></li>
+            <li>Live Demo: <a href="https://vaulted-wealth.onrender.com/" target="_blank">(Live Demo)</a></li>
         </ul>
     </div>
     <div class="section">
